[gd_scene load_steps=8 format=2]

[ext_resource path="res://miniGames/dance/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://miniGames/dance/Scenario.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.tscn" type="PackedScene" id=3]
[ext_resource path="res://miniGames/dance/GUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://miniGames/dance/DanceMinigame.gd" type="Script" id=5]
[ext_resource path="res://miniGames/dance/Music.gd" type="Script" id=6]
[ext_resource path="res://miniGames/dance/SFX.gd" type="Script" id=7]

[node name="DanceMinigame" type="Node"]
script = ExtResource( 5 )
scn_game = ExtResource( 3 )

[node name="GUI" parent="." instance=ExtResource( 4 )]

[node name="Scenario" parent="." instance=ExtResource( 2 )]

[node name="Star_Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 520, 384 )
scale = Vector2( 0.5, 0.5 )
z_index = 1

[node name="Audio" type="Node" parent="."]

[node name="SFX" type="AudioStreamPlayer" parent="Audio"]
volume_db = -35.0
script = ExtResource( 7 )

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
volume_db = -30.0
script = ExtResource( 6 )
[connection signal="fail" from="." to="GUI" method="_on_DanceMinigame_fail"]
[connection signal="fail" from="." to="Audio/SFX" method="_on_DanceMinigame_fail"]
[connection signal="game_over" from="." to="GUI" method="_on_DanceMinigame_game_over"]
[connection signal="game_over" from="." to="Audio/Music" method="_on_DanceMinigame_game_over"]
[connection signal="player_stats_changed" from="." to="GUI" method="_on_DanceMinigame_player_stats_changed"]
[connection signal="success" from="." to="GUI" method="_on_DanceMinigame_success"]
[connection signal="success" from="." to="Audio/SFX" method="_on_DanceMinigame_success"]
[connection signal="win_game" from="." to="GUI" method="_on_DanceMinigame_win_game"]
[connection signal="win_game" from="." to="Audio/SFX" method="_on_DanceMinigame_win_game"]
[connection signal="win_game" from="." to="Audio/Music" method="_on_DanceMinigame_win_game"]
[connection signal="arrow_in_ring" from="GUI" to="." method="_on_GUI_arrow_in_ring"]
[connection signal="arrow_out_of_ring" from="GUI" to="." method="_on_GUI_arrow_out_of_ring"]
[connection signal="arrow_out_of_screen" from="GUI" to="." method="_on_GUI_arrow_out_of_screen"]
[connection signal="last_arrow_out" from="GUI" to="." method="_on_GUI_last_arrow_out"]
[connection signal="loser_retry" from="GUI" to="." method="_on_GUI_loser_retry"]
[connection signal="player_exit" from="GUI" to="." method="_on_GUI_player_exit"]
[connection signal="finished" from="Audio/SFX" to="." method="_on_SFX_finished"]
